K8S/professorservice-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: professorservice-srv
spec:
  type: NodePort
  selector:
    app: professorservice
  ports:
  - name: professorservice
    protocol: TCP
    port: 8080
    targetPort: 8080
