K8S/studentservice-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentservice-srv
spec:
  type: NodePort
  selector:
    app: studentservice
  ports:
    - name: studentservice
      protocol: TCP
      port: 8080
      targetPort: 8080
