K8S/thesisservice-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: thesiservice-srv
spec:
  type: NodePort
  selector:
    app: thesiservice
  ports:
  - name: thesiservice
    protocol: TCP
    port: 8080
    targetPort: 8080
